--- a/client/src/components/featured/featured.css
+++ b/client/src/components/featured/featured.css
@@ -1,6 +1,4 @@
-
-
-.featured{
+.featured {
   width: 100%;
   max-width: 1024px;
   display: flex;
@@ -10,60 +8,57 @@
   z-index: 1;
 }
 
-.featuredItem{
+.featuredItem {
   position: relative;
-  color: white;
+
   border-radius: 10px;
   overflow: hidden;
   height: 250px;
-  flex:1
+  flex: 1;
 }
 
-.featuredImg{
+.featuredImg {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.featuredTitles{
+.featuredTitles {
   position: absolute;
   bottom: 20px;
   left: 20px;
 }
-.bet{
+.bet {
   font-size: 30px;
   margin-bottom: 50px;
 }
 @media only screen and (max-width: 320px) {
   .featuredItem {
-   display: block; 
-   margin-top: 20px;
+    display: block;
+    margin-top: 20px;
   }
-  .featured{
+  .featured {
     display: block;
     width: 90%;
     margin: auto;
   }
   .bet {
-font-size: 18px;
-margin-bottom: 10px;
-
+    font-size: 18px;
+    margin-bottom: 10px;
   }
+}
+@media only screen and (max-width: 570px) {
+  .bet {
+    font-size: 20px;
+    margin-bottom: 10px;
   }
-  @media only screen and (max-width: 570px) {
-    .bet {
-      font-size: 20px;
-      margin-bottom: 10px;
-        }
-    .featuredItem {
-     display: block; 
-     margin-bottom: 20px;
-    }
-    .featured{
-      display: block;
-      width: 90%;
-      margin: auto;
-    }
-    
-    }
-   
+  .featuredItem {
+    display: block;
+    margin-bottom: 20px;
+  }
+  .featured {
+    display: block;
+    width: 90%;
+    margin: auto;
+  }
+}
